fix scrollbar left in lang docs theme page

--- a/next_app/src/screens/Quiz/QuizPageBuilder.module.css
+++ b/next_app/src/screens/Quiz/QuizPageBuilder.module.css
@@ -32,9 +32,9 @@
 	max-width: 100%;
 	height: auto;
 	max-height: 40vh;
-	width: 100%;
 	object-fit: cover;
 	border-radius: 7px;
+	width: auto;
 }
 .noimg{
 	object-fit: scale-down;
